# proto

./: city_tour.c  inotify.c
C/: .clang-format  BufBound.h  BufBoundPut.cpp  BufBoundPutBench.cpp  Callback.h  CallbackTest.cpp  Deque.h  DequeTest.cpp  abs.c  align.cpp  binlog.cpp  blocks.cpp  ceil.cpp  deque.cpp  dequeue.h  env.sh  isgraph.cpp  macro.c  odc.cpp  pow.c  preproc.c  shift.cpp  sizeof_str.cpp  string_alloc.cpp  strndup.cpp
bash/: argv0.sh  deweave.sh  nulls.sh  numbers.sh  parens.sh  runargs_decode.sh
city_tour/: 3.4.test  4.test  5.test  Makefile  city_tour.c
gn/hello_world/: .gn  BUILD.gn  echo_into.py
gn/hello_world/.gn.d/: BUILD.gn  BUILDCONFIG.gn
gn/hello_world/.gn.d/toolchains/: BUILD.gn
gn/hello_world_program/: .gn  BUILD.gn
gn/hello_world_program/.gn.d/: BUILD.gn  BUILDCONFIG.gn
gn/hello_world_program/.gn.d/toolchains/: BUILD.gn
inotify/: inotify.c
make/: include_and_make.mak  updirs.mak  variables.mak
one_away/: Makefile  main.expect  main.test  one_away.c
rust/as_u64/: Cargo.toml
rust/as_u64/src/: main.rs
