# project has to have a BUILD.gn in addition to a .gn?

declare_args() {
  # defaults
  default_greeting = "dunno"
}

declare_args() {
  greeting = default_greeting
}

template("hello") {
  _who = target_name
  not_needed(invoker, "*")

  action("hello_${_who}") {
    hello = "${root_gen_dir}/hello_${_who}"
    outputs = [ hello ]
    script = "echo_into.py"
    args = [
      rebase_path(hello, root_build_dir),
      greeting,
      _who,
    ]
  }
}

if (current_toolchain != "//.gn.d:dummy") {
  whos = [
    "world",
    "you",
  ]
  foreach(who, whos) {
    hello(who) {
    }
  }
  group("all") {
    deps = []
    foreach(who, whos) {
      deps += [ ":hello_${who}" ]
    }
  }
} else {
  group("all") {
    deps = []
    foreach(lang,
        [
          "english",
          "french",
    ]) {
      toolchain = "//.gn.d:$lang"
      deps += [ ":all(${toolchain})" ]
    }
  }
}
